admin func, html redundancy files, dummy login data